2018-11-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Pass NULL instead of a stock marshaller to g_signal_new().

	* libbalsa/address-view.c (libbalsa_address_view_class_init):
	* libbalsa/cell-renderer-button.c
	(libbalsa_cell_renderer_button_class_init):
	* libbalsa/imap/imap-handle.c (imap_mbox_handle_class_init):
	* libbalsa/mailbox.c (libbalsa_mailbox_class_init):
	* src/balsa-index.c (bndx_class_init):
	* src/balsa-mblist.c (bmbl_class_init):
	* src/balsa-message.c (balsa_message_class_init):
	* src/filter-run-dialog.c (balsa_filter_run_dialog_class_init):
	* src/mailbox-node.c (balsa_mailbox_node_class_init):
	* src/main-window.c (balsa_window_class_init):
	* src/toolbar-factory.c (balsa_toolbar_model_class_init):

2018-11-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove marshal lists

	* libbalsa/imap/libimap-marshal.list:
	* libbalsa/libbalsa-marshal.list:

2018-11-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	GNotification does not use HTML markup

	* libbalsa/information.c (libbalsa_information_varg): so do not
	escape markup characters in the text

2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Clear passwords if authentication fails

	* libbalsa/mailbox_pop3.c, libbalsa/send.c: clear appropriate
	password when libnetclient reports an authentication failure
	(SMTP, POP), or could not decrypt a user certificate's private key
	* libnetclient/net-client-pop.[ch]: report auth failure if the
	server reports any error in the authentication phase (AUTH,
	APOP, USER/PASS); fix nagging by Flexelint
	* libnetclient/net-client-smtp.[ch]: report auth failure if
	the server replies with status codes 534 or 535; fix nagging
	by Flexelint
	* libnetclient/net-client.[ch]: report a certificate key
	decryption error if the passphrase is wrong


2018-11-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix broken IMAP special folders & other migration issues

	* libbalsa/mailbox.[ch]: tell libbalsa_mailbox_new_from_config()